--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npm run prisma:deploy && next build",
     "start": "next start",
+    "prisma:deploy": "npx prisma migrate deploy && prisma generate",
     "lint": "next lint"
   },
   "dependencies": {
